@@ -47,6 +47,7 @@
 #include "../utils/string_array.h"
 #include "../utils/test_helpers.h"
 #include "../utils/utils.h"
+#include "../cmd_actions.h"
 #include "../cmd_core.h"
 #include "../cmd_completion.h"
 #include "../flist_sel.h"
@@ -116,6 +117,7 @@ static int goto_cmd(const cmd_info_t *cmd_info);
 static int chistory_cmd(const cmd_info_t *cmd_info);
 static int cnewer_cmd(const cmd_info_t *cmd_info);
 static int colder_cmd(const cmd_info_t *cmd_info);
+static int grep_cmd(const cmd_info_t *cmd_info);
 static int nohlsearch_cmd(const cmd_info_t *cmd_info);
 static int quit_cmd(const cmd_info_t *cmd_info);
 static int write_cmd(const cmd_info_t *cmd_info);
@@ -205,6 +207,10 @@ static const cmd_add_t commands[] = {
 	  .descr = "exit the menu",
 	  .flags = 0,
 	  .handler = &quit_cmd,        .min_args = 0,   .max_args = 0, },
+	{ .name = "grep",              .abbr = "gr",    .id = COM_GREP,
+	  .descr = "query grep results",
+	  .flags = HAS_EMARK,
+	  .handler = &grep_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "nohlsearch",        .abbr = "noh",   .id = -1,
 	  .descr = "reset highlighting of search matches",
 	  .flags = 0,
@@ -1035,6 +1041,13 @@ colder_cmd(const cmd_info_t *cmd_info)
 		return CMDS_ERR_CUSTOM;
 	}
 	return 0;
+}
+
+/* Handles :grep command with possible inversion of matches. */
+static int
+grep_cmd(const cmd_info_t *cmd_info)
+{
+	return act_grep(cmd_info->argc > 0 ? cmd_info->args : NULL, cmd_info->emark);
 }
 
 /* Disables highlight of search result matches. */
